2011-01-07  Peter Rosin  <peda@lysator.liu.se>

	Convert file name to toolchain format when blessing archives.
	* libltdl/config/ltmain.m4sh (func_mode_install): When executing
	old_postinstall_cmds and old_archive_cmds, convert $oldlib to a
	format appropriate for the tool and provide that in $tool_oldlib.
	Also use $tool_oldlib when stripping old libraries.
	* libltdl/m4/libtool.m4 (_LT_CMD_OLD_ARCHIVE): Use $tool_oldlib
	as argument to $RANLIB.
	* THANKS: Update.
	Report by Dan McMahill.

2011-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Bump copyright years.
	* ChangeLog.2010: New, rotated from ...
	* ChangeLog: ... here.
	* Makefile.am (EXTRA_DIST): Add ChangeLog.2010.
	* NEWS, libltdl/config/ltmain.m4sh: Bump copyright years.
	* libltdl/m4/libtool.m4 (_LT_COPYING, LT_OUTPUT): Likewise.
	* libtoolize.m4sh: Likewise.
	* doc/libtool.texi: Likewise.

Continued in ChangeLog.2010
-- 
  Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
  2006, 2007, 2008, 2009, 2011 Free Software Foundation, Inc.

  This file is part of GNU Libtool.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.  This file is offered as-is,
without warranty of any kind.

vim:tw=72