@@ -1,3 +1,11 @@
+2011-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix $wl setting for Solaris Studio 12.2 f90 on GNU/Linux.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux]
+	<lt_prog_compiler_wl>: Set to '-Qoption ld ' if we
+	detect Sun Fortran version 8.4 or newer.
+	Report by Terry Dontje.
+
 2011-01-07  Peter Rosin  <peda@lysator.liu.se>
 
 	Convert file name to toolchain format when blessing archives.
